# backend/openapi.yaml
@@ -381,6 +381,19 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/novel.v1.GenerateWorldViewResponse'
+    /api/v1/novel/stats:
+        get:
+            tags:
+                - NovelService
+            description: 获取统计信息
+            operationId: NovelService_GetStats
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/novel.v1.GetStatsResponse'
     /api/v1/novel/switch-model:
         post:
             tags:
@@ -1398,6 +1411,14 @@ components:
                         - $ref: '#/components/schemas/novel.v1.Project'
                     description: 项目详情
             description: 获取项目详情响应
+        novel.v1.GetStatsResponse:
+            type: object
+            properties:
+                stats:
+                    allOf:
+                        - $ref: '#/components/schemas/novel.v1.ProjectStats'
+                    description: 统计信息
+            description: 统计信息响应
         novel.v1.LLMOptions:
             type: object
             properties:
@@ -1569,6 +1590,24 @@ components:
                     description: 更新时间
                     format: date-time
             description: 数据模型
+        novel.v1.ProjectStats:
+            type: object
+            properties:
+                total_projects:
+                    type: integer
+                    description: 总项目数
+                    format: int32
+                completed_projects:
+                    type: integer
+                    description: 已完成项目数
+                    format: int32
+                total_words:
+                    type: string
+                    description: 总字数
+                monthly_words:
+                    type: string
+                    description: 本月字数
+            description: 项目统计信息
         novel.v1.ProofreadResult:
             type: object
             properties:
